--- a/styles/index.css
+++ b/styles/index.css
@@ -1,45 +1,28 @@
-/* Set default font family and size */
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-}
-
-/* Style the page title */
-h1 {
-  margin-top: 30px;
-  font-size: 28px;
-}
-
-/* Style the table */
 table {
   border-collapse: collapse;
   width: 100%;
+  height: 500px;
   margin-top: 30px;
 }
 
-/* Style the table header row */
 thead tr {
   background-color: #333;
   color: #fff;
 }
 
-/* Style the table header cells */
 th {
   padding: 10px;
   text-align: left;
 }
 
-/* Style the table data rows */
 tbody tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-/* Style the table data cells */
 td {
   padding: 10px;
 }
 
-/* Style the table actions links */
 td a {
   color: #333;
   text-decoration: none;
@@ -48,4 +31,25 @@ td a {
 
 td a:hover {
   text-decoration: underline;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.pagination a {
+  display: inline-block;
+  padding: 5px 10px;
+  border: 1px solid #333;
+  margin: 0 5px;
+  color: #333;
+  text-decoration: none;
+}
+
+.pagination a.active {
+  background-color: #333;
+  color: #fff;
 }
