--- a/styles/index.css
+++ b/styles/index.css
@@ -1,55 +1,48 @@
-table {
-  border-collapse: collapse;
-  width: 100%;
-  height: 500px;
-  margin-top: 30px;
-}
-
-thead tr {
-  background-color: #333;
-  color: #fff;
-}
-
-th {
-  padding: 10px;
-  text-align: left;
-}
-
-tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-td {
-  padding: 10px;
-}
-
-td a {
-  color: #333;
-  text-decoration: none;
-  margin-right: 10px;
-}
-
-td a:hover {
-  text-decoration: underline;
-}
-
-.pagination {
+.hero {
+  background-size: cover;
+  background-position: center;
+  height: 70vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-top: 20px;
-  width: 100%;
+  align-items: center;
+  color: #fff;
 }
 
-.pagination a {
+.hero h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+  text-shadow: 1px 1px #333;
+}
+
+.hero p {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  text-shadow: 1px 1px #333;
+}
+
+.btn {
   display: inline-block;
-  padding: 5px 10px;
-  border: 1px solid #333;
-  margin: 0 5px;
+  padding: 1rem 2rem;
+  background-color: #ffc107;
   color: #333;
   text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-radius: 3rem;
+  box-shadow: 1px 1px #333;
+  transition: background-color 0.2s ease-in-out;
 }
 
-.pagination a.active {
+.btn:hover {
   background-color: #333;
   color: #fff;
+}
+#bg-video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
 }
