--- a/styles/auth/signup.css
+++ b/styles/auth/signup.css
@@ -1,12 +1,12 @@
-form {
+.signup form {
   max-width: 400px;
   margin: 0 auto;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-select {
+.signup form input[type="text"],
+.signup form input[type="email"],
+.signup form input[type="password"],
+.signup form select {
   display: block;
   width: 100%;
   padding: 10px;
@@ -18,7 +18,7 @@ select {
   font-family: Arial, sans-serif;
 }
 
-button[type="submit"] {
+.signup form button[type="submit"] {
   display: block;
   width: 100%;
   padding: 10px;
