--- a/styles/admin/user/edit_user.css
+++ b/styles/admin/user/edit_user.css
@@ -10,7 +10,7 @@ h1 {
   margin-top: 50px;
 }
 
-form {
+.container form {
   width: 50%;
   margin: 0 auto;
   background-color: #fff;
@@ -19,15 +19,15 @@ form {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-label {
+.container label {
   display: block;
   margin-bottom: 10px;
   font-weight: bold;
 }
 
-input[type="text"],
-input[type="email"],
-select {
+.container input[type="text"],
+.container input[type="email"],
+.container select {
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
@@ -35,11 +35,11 @@ select {
   border: 1px solid #ccc;
 }
 
-select {
+.container select {
   margin-bottom: 40px;
 }
 
-input[type="submit"] {
+.container input[type="submit"] {
   display: block;
   width: 100%;
   padding: 10px;
@@ -51,6 +51,6 @@ input[type="submit"] {
   transition: background-color 0.3s ease;
 }
 
-input[type="submit"]:hover {
+.container input[type="submit"]:hover {
   background-color: #3e8e41;
 }
