--- a/styles/admin/comment/comments.css
+++ b/styles/admin/comment/comments.css
@@ -1,3 +1,9 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+}
 table {
   border-collapse: collapse;
   width: 100%;
