--- a/styles/search.css
+++ b/styles/search.css
@@ -1,10 +1,8 @@
-/* General Styles */
 body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
 h1 {
@@ -32,7 +30,6 @@ a:hover {
   color: #0056b3;
 }
 
-/* Card Styles */
 .cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -86,7 +83,6 @@ a:hover {
   background-color: #0056b3;
 }
 
-/* Pagination Styles */
 .pagination {
   display: flex;
   justify-content: center;
