--- a/styles/item/items.css
+++ b/styles/item/items.css
@@ -1,111 +1,107 @@
-/* General Styles */
 body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
   margin: 0;
-  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 h1 {
-  font-size: 36px;
-  margin: 20px 0;
   text-align: center;
+  margin-top: 30px;
 }
 
-h2 {
-  font-size: 24px;
-  margin: 10px 0;
-}
-
-p {
-  margin: 10px 0;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  transition: color 0.2s ease-in-out;
-}
-
-a:hover {
-  color: #0056b3;
-}
-
-/* Card Styles */
 .cards-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 20px;
+  margin: 20px;
 }
 
 .card {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  margin: 10px 0;
-  overflow: hidden;
-  width: calc(33.333% - 20px);
+  width: 30%;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .card img {
-  display: block;
+  width: 100%;
   height: 200px;
   object-fit: cover;
-  width: 100%;
 }
 
 .card h2 {
-  font-size: 20px;
+  font-size: 1.5rem;
   margin: 10px;
-  text-align: center;
 }
 
 .card p {
   margin: 10px;
-  text-align: center;
+  font-size: 1.1rem;
 }
 
 .card a {
-  background-color: #007bff;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
   display: block;
-  margin: 10px auto;
-  padding: 10px 20px;
   text-align: center;
-  transition: background-color 0.2s ease-in-out;
-  width: 80%;
+  margin: 10px;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
 .card a:hover {
-  background-color: #0056b3;
+  background-color: #3e8e41;
 }
 
-/* Pagination Styles */
+.sorting {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+}
+
+.sorting p {
+  margin-right: 10px;
+}
+
+.sorting a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #333;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.sorting a.active {
+  background-color: #333;
+  color: white;
+}
+
 .pagination {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
+  margin: 20px;
 }
 
 .pagination a {
-  background-color: #fff;
-  border: 1px solid #007bff;
-  border-radius: 5px;
-  color: #007bff;
-  display: block;
-  margin: 0 10px;
+  display: inline-block;
+  margin: 0 5px;
   padding: 5px 10px;
   text-align: center;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #333;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
+.pagination a.active,
 .pagination a:hover {
-  background-color: #007bff;
-  color: #fff;
+  background-color: #333;
+  color: white;
 }
