--- a/styles/item/items.css
+++ b/styles/item/items.css
@@ -47,7 +47,7 @@ h1 {
   text-align: center;
   margin: 10px;
   padding: 10px;
-  background-color: #4caf50;
+  background-color: #333;
   color: white;
   text-decoration: none;
   border-radius: 5px;
